# ComfyUI-WorkspaceKit

./: .comfyignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROGRESS.zh-CN.md  README.md  README.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  __init__.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ARCHITECTURE.md  BACKUP_CONVENTION.md  MODULE_MAP.md  PANEL_PROVIDER_API.md  PRODUCT_REQUIREMENTS.md  RELEASE_VERSIONING.md  ROADMAP.md  TESTING.md  nodes2-progress.md  release-prep.md
entry/: entry.js  pinyin-pro.esm.js  workspace2_canvas_groups.js  workspace2_title.js
scripts/: create-project-backup.ps1  release_version.py  test-canvas-group-action-icons.mjs  test-decorated-icon.mjs  test-group-delete-key-events.mjs  test-group-marquee-selection.mjs  test-group-multi-drag-plan.mjs  test-group-multi-selection-commands.mjs  test-group-pointer-actions.mjs  test-group-selection-cancel-events.mjs  test-group-settings-escape.mjs  test-module-shortcuts.mjs  test-node-category-projection.mjs  test-node-definition-merge.mjs  test-node-favorite-group-store.mjs  test-node-favorite-store.mjs  test-node-object-info-cache.mjs  test-node-object-info-refresh.mjs  test-node-official-tree-renderer.mjs  test-node-official-tree.mjs  test-node-row-renderer.mjs  test-node-top-section-renderer.mjs  test-panel-api.mjs  test-panel-background-state.mjs  test-panel-chrome.mjs  test-personalization-panel.mjs  test-preview-positioner.mjs  test-settings-action-wiring.mjs  test-settings-controls.mjs  test-settings-dialog-sections.mjs  test-settings-dialog-shell.mjs  test-sidebar-startup-resilience.mjs  test-template-body-state-renderer.mjs  test-template-context-menu-renderer.mjs  test-template-drag-drop.mjs  test-template-group-contents-renderer.mjs  test-template-group-context-menu.mjs  test-template-group-header-renderer.mjs  test-template-minimap.mjs  test-template-results-projection.mjs  (+18 more)
service/: folder_meta_service.py  (+11 more)
(+80 files in other folders)
