[project]
name = "comfyui-workspace2"
description = "A ComfyUI workspace enhancement extension for workflows, node favorites, and canvas grouping."
version = "0.1.0"
license = { file = "LICENSE" }
authors = [
  { name = "ZiYao00" },
]

[project.urls]
Repository = "https://github.com/ZiYao00/ComfyUI-Workspace2"

[tool.comfy]
# PublisherId is intentionally not set until the Comfy Registry publisher is confirmed.
DisplayName = "ComfyUI-Workspace2"
Icon = ""
