[project]
name = "comfyui-workspace2"
description = "A ComfyUI workspace enhancement extension for workflow organization, node favorites, reusable node templates, and canvas grouping."
version = "0.2.1b0"
license = { file = "LICENSE" }
authors = [
  { name = "ZiYao00" },
]

[project.urls]
Repository = "https://github.com/ZiYao00/ComfyUI-Workspace2"

[tool.comfy]
# PublisherId is intentionally not set until the Comfy Registry publisher is confirmed.
DisplayName = "ComfyUI-Workspace2"
Icon = ""
