[project]
name = "comfyui-workspacekit"
description = "A modular workspace, sidebar, and panel system for organizing workflows, nodes, favorites, templates, and canvas groups in ComfyUI."
# Release through scripts/release_version.py so this semantic version remains authoritative.
version = "0.2.3"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "ZiYao00" },
]
keywords = ["comfyui", "workspace", "sidebar", "workflow", "nodes"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/ZiYao00/ComfyUI-WorkspaceKit"
Repository = "https://github.com/ZiYao00/ComfyUI-WorkspaceKit"
Issues = "https://github.com/ZiYao00/ComfyUI-WorkspaceKit/issues"

[tool.comfy]
PublisherId = "yuer424"
DisplayName = "WorkspaceKit"
